<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>darwin</groupId>
	<artifactId>darwin</artifactId>
	<version>1.0.0</version>
	<name>DArWIn</name>
	<description>Darwin: Artificial Wildlife Intelligence</description>


	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<!-- <encoding>UTF-8</encoding> -->
				</configuration>
			</plugin>
<!-- 			<plugin> -->
<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
<!-- 				<artifactId>maven-resources-plugin</artifactId> -->
<!-- 				<version>3.0.1</version> -->
<!-- 				<dependencies> -->
<!-- 					<dependency> -->
<!-- 						<groupId>org.apache.maven.shared</groupId> -->
<!-- 						<artifactId>maven-filtering</artifactId> -->
<!-- 						<version>3.1.1</version> -->
<!-- 					</dependency> -->
<!-- 				</dependencies> -->
<!-- 			</plugin> -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<shadedArtifactAttached>true</shadedArtifactAttached>
					<shadedClassifierName>shaded</shadedClassifierName>
					<transformers>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<mainClass>darwin.darwin.view.MainView</mainClass>
						</transformer>
					</transformers>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>1.7.13</version>
				<executions>
					<execution>
						<id>l4j-clui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>gui</headerType>
							<jar>${project.build.directory}/${project.artifactId}-${project.version}-shaded.jar</jar>
							<outfile>${project.build.directory}/darwin.exe</outfile>
							<downloadUrl>https://marsonge.github.io/DArWIn/</downloadUrl>
							<classPath>
								<mainClass>darwin.darwin.view.MainView</mainClass>
								<preCp>anything</preCp>
							</classPath>
							<icon>src/main/resources/icon/darwin.ico</icon>
							<jre>
								<minVersion>1.8.0</minVersion>
								<jdkPreference>preferJre</jdkPreference>
							</jre>
							<versionInfo>
								<fileVersion>1.0.0.0</fileVersion>
								<txtFileVersion>${project.version}</txtFileVersion>
								<fileDescription>${project.name}</fileDescription>
								<copyright>2016 https://marsonge.github.io/DArWIn/</copyright>
								<productVersion>1.0.0.0</productVersion>
								<txtProductVersion>1.0.0.0</txtProductVersion>
								<productName>${project.name}</productName>
								<companyName>https://marsonge.github.io/DArWIn/</companyName>
								<internalName>DArWIn</internalName>
								<originalFilename>DArWIn.exe</originalFilename>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>com.github.monkeysintown</groupId>
			<artifactId>jgraphx</artifactId>
			<version>3.1.2.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.5</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>

	</dependencies>
</project>